[gd_scene load_steps=5 format=3 uid="uid://ctw8loading01"]

[ext_resource type="Texture2D" uid="uid://qe854mc1641r" path="res://assets/seaverse_icon.png" id="1_load"]
[ext_resource type="Script" path="res://scenes/loading_screen.gd" id="2_load"]

[sub_resource type="Gradient" id="Gradient_wave"]
offsets = PackedFloat32Array(0, 0.3, 0.5, 0.7, 1)
colors = PackedColorArray(0.2, 0.6, 1, 1, 0.3, 0.7, 1, 1, 0.4, 0.8, 1, 1, 0.3, 0.7, 1, 1, 0.2, 0.6, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_wave"]
gradient = SubResource("Gradient_wave")
width = 512
height = 32
fill_from = Vector2(0, 0.5)
fill_to = Vector2(1, 0.5)

[node name="LoadingScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_load")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="Logo" type="TextureRect" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(256, 256)
layout_mode = 2
texture = ExtResource("1_load")
expand_mode = 1
stretch_mode = 5

[node name="LoadingText" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.5, 0.8, 1)
theme_override_font_sizes/font_size = 24
text = "Loading..."
horizontal_alignment = 1

[node name="ProgressContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="ProgressBarBG" type="Panel" parent="CenterContainer/VBoxContainer/ProgressContainer"]
layout_mode = 2

[node name="ProgressBarBGColor" type="ColorRect" parent="CenterContainer/VBoxContainer/ProgressContainer/ProgressBarBG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.8, 0.9, 1, 1)

[node name="ProgressBarFill" type="TextureRect" parent="CenterContainer/VBoxContainer/ProgressContainer/ProgressBarBG"]
clip_contents = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_wave")
expand_mode = 1
stretch_mode = 2

[node name="WaveAnimation" type="TextureRect" parent="CenterContainer/VBoxContainer/ProgressContainer/ProgressBarBG"]
modulate = Color(1, 1, 1, 0.5)
clip_contents = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_wave")
expand_mode = 1
stretch_mode = 2

[node name="PercentLabel" type="Label" parent="CenterContainer/VBoxContainer/ProgressContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.5, 0.8, 1)
theme_override_font_sizes/font_size = 18
text = "0%"
horizontal_alignment = 1
vertical_alignment = 1
